# contract_labeling_with_TOC

./: .gitignore  README.md  TOC_Extraction_Step2.ipynb  TOC_Labels_full.json  TOC_Labels_sample.json  contract_full_map.json  contract_image_renamer.py  contract_index_mapper.py  contract_name_map.json  fetch_html.py  perform_ocr_and_get_word_geometries.ipynb  process_html.py  pyproject.toml  run_toc_extraction_pipeline.py  scraping_results_full.json  text_match_post_ocr.ipynb  toc_extracted.json  toc_labelling.py  toc_labelling_main.py
MarkupLM/: playground-html-generation.ipynb  playground-html-generation_brian.ipynb  playground-html-node-annotation.ipynb
config/: cuad_master_csv_mapping.csv  pipeline_config.yml
dataset_utils/: cuad_data_utils.py
html_utils/: fetch_html.py  process_html.py
json_outputs/: OTISWORLDWIDECORP_04_03_2020-EX-10.4-INTELLECTUAL PROPERTY AGREEMENT.json  PerformanceSportsBrandsInc_20110909_S-1_EX-10.10_7220214_EX-10.10_Endorsement Agreement.json
labelled_outputs_full/: AimmuneTherapeuticsInc  AtnInternationalInc  BABCOCK  BloomEnergyCorp  CERES,INC  CardlyticsInc  CerenceInc  DovaPharmaceuticalsInc  FOUNDATIONMEDICINE,INC  GOOSEHEADINSURANCE,INC  GRANTIERRAENERGYINC  GSITECHNOLOGYINC  HOSPITALITYINVESTORSTRUST,INC  HPILHOLDING  HarpoonTherapeuticsInc  IGENEBIOTECHNOLOGYINC  JOINTCORP  MOELIS  NUVEEN - REMARKETING AGREEMENT.htm  OTISWORLDWIDECORP  ParatekPharmaceuticalsInc  PerformanceSportsBrandsInc  PfHospitalityGroupInc  TRANSPHORM,INC  UpjohnInc  VAPOTHERM, INC. - Manufacturing and Supply Agreement.htm  VERICELCORP  VERTEXENERGYINC  (+2 more)
(+5 files in other folders)
